--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@
 	   
 	  #head-top {
 	  position:relative;
-		background:#292C37;
+		background:#ECEAD8;
 		padding-top:0px;
 		padding-bottom:0px;
 		margin-top:-60px;
@@ -49,7 +49,7 @@
 	  #head-top .jumbotron{
 		background:none;
 		min-height:300px;
-		color:#ffffff;
+		color:#1B1B19;
 		-webkit-border-radius:0px;
 		-moz-border-radius:0px;
 		border-radius:0px;
@@ -74,7 +74,7 @@
 		display:inline-block;
 		width:70px;
 		height:40px;
-		background:#fc5242;
+		background:#A56A56;
 		-webkit-box-sizing:border-box;
 		-moz-box-sizing:border-box;
 		box-sizing:border-box;
@@ -103,13 +103,13 @@
 	  ===========================*/
 	  
 	#Section-1{
-	background:#fc5242;
-	color:#fff;
+	background:#A56A56;
+	color:#ECEAD8;
 	}
 	  
 	  #Section-2{
-		background:#1dbb90;
-		color:#fff;
+		background:#B6A050;
+		color:#1A1A18;
 	  }
 	  
 	  .well{
@@ -120,7 +120,7 @@
 	  }
 	  #Section-1 .well{
 		/*background-color:#34495e;*/
-		background:url(../../images/bgredtwo.png) 0% 0% fixed repeat;
+		background:url(../../images/blurry-forest-1.jpg) 0% 0% fixed repeat;
 		color:#fff;
 		margin-bottom:-100px;
 		margin-top:60px;
@@ -161,7 +161,7 @@
 	}
 	hr, 
 	.page-header {
-		border-color:rgba(250,250,250, 0.1)
+		border-color:rgba(27,27,25, 0.3);
 	  }
 	   
 	  #Section-2 p{
@@ -229,7 +229,7 @@
 	.navbar .nav > li > a {
 		float: none;
 		padding: 30px 20px 30px;
-		color: #fff;
+		color: #ECEAD8;
 		text-decoration: none;
 		text-shadow: none;
 		font-size:14px;
@@ -243,17 +243,17 @@
 	.navbar .nav > .active > a, 
 	.navbar .nav > .active > a:hover, 
 	.navbar .nav > .active > a:focus {
-		color: #fff;
+		color: #ECEAD8;
 		text-decoration: none;
 		background: none;
-		border-top: 10px solid #fc5242;
+		border-top: 10px solid #A06653;
 		-webkit-box-shadow:  none;
 			-moz-box-shadow:   none;
 				box-shadow:  none;
 	}
 	.navbar .navbar-brand {
 		padding: 30px 15px 30px 15px;
-		color:#fc5242;
+		color:#A06653;
 		text-shadow:none;
 		font-size:26px;
 		font-weight:100;
@@ -271,7 +271,7 @@
 		min-height: 60px;
 		padding-right: 20px;
 		padding-left: 20px;
-		background: #2b2b2b;
+		background: #8CA894;
 		background-image: none;
 		background-repeat: repeat-x;
 		border: none;
