--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,9 @@
 	   
 	  #head-top {
 	  position:relative;
-		background:#ECEAD8;
+		/*background:#ECEAD8;*/
+		background:url(../../images/field.jpg) no-repeat center;
+		background-size: cover;
 		padding-top:0px;
 		padding-bottom:0px;
 		margin-top:-60px;
@@ -53,7 +55,7 @@
 		-webkit-border-radius:0px;
 		-moz-border-radius:0px;
 		border-radius:0px;
-		padding-top:160px;
+		padding-top:100px;
 	}
 	#head-top .jumbotron h1{
 	text-shadow: 2px 2px 0px rgba(150, 150, 150, 0.65);
@@ -228,8 +230,7 @@
 	  =============================== */
 	.navbar .nav > li > a {
 		float: none;
-		padding: 30px 20px 30px;
-		color: #ECEAD8;
+		color: #F6F4ED;
 		text-decoration: none;
 		text-shadow: none;
 		font-size:14px;
@@ -243,7 +244,7 @@
 	.navbar .nav > .active > a, 
 	.navbar .nav > .active > a:hover, 
 	.navbar .nav > .active > a:focus {
-		color: #ECEAD8;
+		color: #F6F4ED;
 		text-decoration: none;
 		background: none;
 		border-top: 10px solid #A06653;
@@ -252,13 +253,16 @@
 				box-shadow:  none;
 	}
 	.navbar .navbar-brand {
-		padding: 30px 15px 30px 15px;
 		color:#A06653;
 		text-shadow:none;
 		font-size:26px;
 		font-weight:100;
 		margin-right:30px;
 		max-width:300px;
+	}
+
+	.navbar .navbar-brand img {
+		width: 177px;
 	}
 
 	.navbar {
