--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
         padding-bottom: 0px;
 		background:#F7F7F7;
 		font-size:16px;
+		-webkit-font-smoothing: antialiased;
       }
 	  
 	  header{
@@ -13,11 +14,20 @@
 	  }
 	  section {
 		position:relative;
-		padding-top:70px;
+		/*padding-top:70px;*/
 		padding-bottom:80px;
 		width:100%;
 		min-width:100%;
-		margin-top:-5px;
+		margin-top:-6px;
+	  }
+
+	  section p.lead {
+	  	font-weight: 400;
+	  }
+
+	  section p.justify {
+	  	margin-bottom: 20px;
+	  }
 	  }
 	  
 	  .page-header{
@@ -28,7 +38,22 @@
 	  	.justify{
 		text-align:justify;
 	}
+
+	h1, h2, h3, h4, h5, h6 {
+		/*font-family: "ff-tisa-web-pro";*/
+		font-family: "skolar";
+		font-weight: 600;
+	}
+
+	p, a {
+/*		font-family: "ff-tisa-web-pro";*/
+		font-family: "skolar";
+		font-weight: 300;
+	}
 	
+	p.lead {
+		font-weight: bold;
+	}
 
 	/* HEADER
 	============================*/
@@ -113,6 +138,10 @@
 		background:#B6A050;
 		color:#1A1A18;
 	  }
+
+	  #Section-2 p {
+	  	color: #1A1A18;
+	  }
 	  
 	  .well{
 		border:none;
@@ -141,21 +170,20 @@
 		padding-bottom:60px;
 	  }
 	  #Section-3{
-		background:#4F92BF;
+		background: #C5D5C8;
 	  } 
-	  #Section-3 h2,
-	  #Section-3 h3{
-		color:#fff;
-		
-	  }  
+
 	  
 	  #Section-4{
-		background:#5dade2;
-	  } 
-	  #Section-4 h2,
-	  #Section-4 h3{
+		background:#292C37;
 		color:#fff;
-		
+	  } 
+
+	  #Section-5 {
+/*			background:url(../../images/tree.jpg) no-repeat center -120px;
+			background-size: 1500px;*/
+			background:#A56A56;
+			color:#ECEAD8;
 	  }
 	  
 	hr{
@@ -167,7 +195,7 @@
 	  }
 	   
 	  #Section-2 p{
-		color:rgba(250,250,250, 0.9);
+		color: #1A1A18;
 	  }
 	  #Section-2 h3 {
 		
@@ -233,13 +261,12 @@
 		color: #F6F4ED;
 		text-decoration: none;
 		text-shadow: none;
-		font-size:14px;
-		font-wight:bold;
-		text-transform:uppercase;
+		font-size: 18px;
+		font-weight: 600;
 		border-top: 10px solid transparent;
 	}
 	.navbar-default .navbar-nav>li>a:hover{
-		color:rgba(250,250,250, .7);
+		color:rgba(250,250,250, .5);
 	}
 	.navbar .nav > .active > a, 
 	.navbar .nav > .active > a:hover, 
@@ -634,7 +661,7 @@ font-size: 40px;
 		}
 		
 		.navbar .navbar-brand {
-			padding: 15px 0px 10px;
+			padding: 10px 0px 10px;
 		}
 		.navbar .navbar-brand{
 			margin-left:20px;
